@@ -1,5 +1,9 @@
 Release notes for python-sflow library and splitsflow application
 
+27-04-2021
+* splitsflow - v0.5.0: bug in read_collectorlist() - keep on adding threads
+Modified in only adding new collectors, modify on change of IP address or port and remove unused collectors
+
 26-04-2021
 * splitsflow - v0.4.10: cleanup unused, commented code; Collector _init log on INFO level in stead of DEBUG
 
